# slice_trait

./: Cargo.toml  README.md
src/: as_slice.rs  boxed_slice.rs  elem.rs  into_boxed_slice.rs  into_slice.rs  length.rs  lib.rs  prereq.rs  same.rs  slice.rs
