[package]
name = "slice_trait"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["slice", "generic", "trait"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "A generic trait for any slice, with item as a type parameter"
repository = "https://github.com/sigurd4/slice_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
moddef = "0.2.6"